--- a/Resources/Prototypes/Catalog/Fills/Lockers/suit_storage.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/suit_storage.yml
@@ -137,7 +137,7 @@
 - type: entity
   id: SuitStorageEngi
   parent: SuitStorageBase
-  suffix: Station Engineer
+  suffix: Engineer # Frontier
   components:
   - type: StorageFill
     contents:
