--- a/Resources/Prototypes/Entities/Objects/Misc/eggspider.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/eggspider.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent: BaseItem
   id: EggSpider
-  name: egg spider
+  name: spider stone # Frontier
   description: Is it a gemstone? Is it an egg? It looks expensive.
   components:
   - type: Sprite
