--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/handheld_mass_scanner.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/handheld_mass_scanner.yml
@@ -1,8 +1,8 @@
 - type: entity
-  name: handheld mass scanner
+  name: handheld radar console
   parent: [ BaseItem, PowerCellSlotSmallItem]
   id: HandHeldMassScanner
-  description: A hand-held mass scanner.
+  description: A hand-held radar console. # Frontier
   components:
   - type: Item
     size: Small
